Adds migration and column for `doc_type_label` and fixes virus scanning logic (#424)
* Adds migration and column for doc type label for user_files table. 
* Fixes an issue with virus scanning if using the noop scanner (would always say the files was scanned even if feature was disabled.)
* Creates annotation for @DynamicField and some tests for that work.
* Adds dynamic field handling for validation
* Updates readme 
Co-Authored-By: Lauren Kemperman; lkemperman@codeforamerica.org

--- a/src/main/resources/application-form-flow-library.yaml
+++ b/src/main/resources/application-form-flow-library.yaml
@@ -2,6 +2,7 @@ spring:
   flyway:
     placeholders:
       uuid_function: "gen_random_uuid"
+      user_file_doc_type_default_label: ${form-flow.uploads.default-doc-type-label:#{null}}
   messages:
     encoding: ISO-8859-1
     basename: messages, messages-form-flow
