--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,8 +1,8 @@
 form-flow:
-#  disabled-flows:
   path: 'test-flow.yaml'
   inputs: 'formflow.library.inputs.'
   uploads:
+    default-doc-type-label: "NotSet"
     accepted-file-types: '.jpeg, .fake, .heic, .tif, .tiff, .pdf'
     max-files: '5'
     max-file-size: '17'
@@ -40,6 +40,7 @@ spring:
     clean-on-validation-error: true
     placeholders:
       uuid_function: "gen_random_uuid"
+      user_file_doc_type_default_label: ${form-flow.uploads.default-doc-type-label:#{null}}
     clean-disabled: false
   messages:
     encoding: ISO-8859-1
