--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -49,6 +49,10 @@ subflows:
     iterationStartScreen: subflowAddItem
     reviewScreen: testReviewScreen
     deleteConfirmationScreen: testDeleteConfirmationScreen
+landmarks:
+  firstScreen: inputs
+  afterSubmitPages:
+    - success
 ---
 name: otherTestFlow
 flow:
