--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.364'
     implementation 'com.smartystreets.api:smartystreets-java-sdk:3.15.2'
     implementation 'org.apache.pdfbox:pdfbox:3.0.0'
+    implementation 'com.github.librepdf:openpdf:1.3.33'
     implementation 'org.yaml:snakeyaml:2.2'
     implementation 'com.mailgun:mailgun-java:1.1.0'
     implementation 'com.google.crypto.tink:tink:1.11.0'
