WIP More tests and Build Time error handling!
[#186001975]

Co-authored-by: Cypress Borg <cborg@codeforamerica.org>

--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -29,6 +29,9 @@ flow:
   test:
     nextScreens:
       - name: success
+  testUpload:
+    nextScreens:
+      - name: pageWithCustomSubmitButton
   pageWithOptionalValidation:
     nextScreens:
       - name: success
