--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     implementation 'com.smartystreets.api:smartystreets-java-sdk:3.15.2'
     implementation 'org.apache.pdfbox:pdfbox:3.0.0'
     implementation 'com.github.librepdf:openpdf:1.3.33'
+    implementation 'org.bouncycastle:bcprov-jdk18on:1.77'
     implementation 'org.yaml:snakeyaml:2.2'
     implementation 'com.mailgun:mailgun-java:1.1.0'
     implementation 'com.google.crypto.tink:tink:1.11.0'
