Create configuration for locking the Submission for a flow after it is submitted (#437)
Adds the ability to lock a flow down such that it redirects the user to a configured page when they attempt to access a page or POST to a page within a flow after their application has been submitted.

* Consolidate DisabedFlowPropertyConfiguration to FormFlowConfigurationProperties
* Create test for locked submission in a given flow
* Add tests for flows configuration factory flow validations
* Refactor FlowsConfigurationFactory
* Validate first screen when session continuity interceptor is enabled
* Add documentation of submission locking to the README

---------

Co-authored-by: Cypress Borg <cborg@codeforamerica.org>

--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -29,6 +29,9 @@ flow:
   test:
     nextScreens:
       - name: success
+  testUpload:
+    nextScreens:
+      - name: pageWithCustomSubmitButton
   pageWithOptionalValidation:
     nextScreens:
       - name: success
@@ -49,6 +52,10 @@ subflows:
     iterationStartScreen: subflowAddItem
     reviewScreen: testReviewScreen
     deleteConfirmationScreen: testDeleteConfirmationScreen
+landmarks:
+  firstScreen: inputs
+  afterSubmitPages:
+    - success
 ---
 name: otherTestFlow
 flow:
