Load font files from configured location
For testing, we set the location to `classpath:pdf-fonts` which works
as long as the tests are run with a file system classpath and not just
jars.

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -21,6 +21,7 @@ form-flow:
   pdf:
     path: 'src/test/resources/pdfs/'
     map-file: 'pdf-map.yaml'
+    fontDirectory: "classpath:pdf-fonts"
   email-client:
     mailgun:
       key: testing-fake-key
