--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -33,7 +33,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/form-flow-test
     username: form-flow-test
-    password: postgres
+    password:
     hikari:
       maximum-pool-size: 2
   flyway:
