Adding "condition" logic at the screen level. If client attempts to view a screen that does not meet the condition, they will be redirected to the next viewable screen

--- a/src/test/resources/flows-config/test-conditional-navigation.yaml
+++ b/src/test/resources/flows-config/test-conditional-navigation.yaml
@@ -32,3 +32,23 @@ subflows:
     iterationStartScreen: fourth
     deleteConfirmationScreen: other
     reviewScreen: third
+---
+name: conditionsTestFlow
+flow:
+  first:
+    nextScreens:
+      - name: skipFirst
+  skipFirst:
+    condition: FalseCondition
+    nextScreens:
+      - name: skipSecond
+  skipSecond:
+    condition: FalseCondition
+    nextScreens:
+      - name: viewThird
+  viewThird:
+    condition: TrueCondition
+    nextScreens:
+      - name: last
+  last:
+    nextScreens: null
