--- a/src/test/resources/flows-config/test-conditional-navigation.yaml
+++ b/src/test/resources/flows-config/test-conditional-navigation.yaml
@@ -50,5 +50,22 @@ flow:
     condition: TrueCondition
     nextScreens:
       - name: last
+  fourth:
+    subflow: testSubflow
+    nextScreens:
+      - name: fifth
+  fifth:
+    condition: FalseCondition
+    subflow: testSubflow
+    nextScreens:
+      - name: other
+  other:
+    nextScreens:
+      - name: last
   last:
     nextScreens: null
+subflows:
+  testSubflow:
+    iterationStartScreen: fourth
+    deleteConfirmationScreen: delete
+    reviewScreen: last
