Adding "condition" logic at the screen level (#500)
* Adding "condition" logic at the screen level. If client attempts to view a screen that does not meet the condition, they will be redirected to the next viewable screen

--- a/src/test/resources/flows-config/test-conditional-navigation.yaml
+++ b/src/test/resources/flows-config/test-conditional-navigation.yaml
@@ -32,3 +32,48 @@ subflows:
     iterationStartScreen: fourth
     deleteConfirmationScreen: other
     reviewScreen: third
+---
+name: conditionsTestFlow
+flow:
+  first:
+    nextScreens:
+      - name: skipFirst
+  skipFirst:
+    condition: FalseCondition
+    nextScreens:
+      - name: skipSecond
+  skipSecond:
+    condition: FalseCondition
+    nextScreens:
+      - name: viewThird
+  viewThird:
+    condition: TrueCondition
+    nextScreens:
+      - name: last
+  fourth:
+    subflow: testSubflow
+    nextScreens:
+      - name: fifth
+  fifth:
+    condition: FalseCondition
+    subflow: testSubflow
+    nextScreens:
+      - name: sixth
+  sixth:
+    condition: FalseCondition
+    nextScreens:
+      - name: seventh
+        condition: FalseCondition
+      - name: other
+        condition: TrueCondition
+      - name: last
+  other:
+    nextScreens:
+      - name: last
+  last:
+    nextScreens: null
+subflows:
+  testSubflow:
+    iterationStartScreen: fourth
+    deleteConfirmationScreen: delete
+    reviewScreen: last
