--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -32,6 +32,9 @@ flow:
   testUpload:
     nextScreens:
       - name: pageWithCustomSubmitButton
+  pageWithCheckboxSetInput:
+    nextScreens:
+      - name: success
   pageWithOptionalValidation:
     nextScreens:
       - name: success
