--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -1,6 +1,7 @@
 name: testFlow
 flow:
   inputs:
+    crossFieldValidationAction: VerifyValidDate
     nextScreens:
       - name: test
   testAddressValidation:
