Honeycrisp updates (Breaking) (#529)
Co-authored-by: Alex Gonzalez <spokenbird@gmail.com>
Co-authored-by: Cypress Borg <cborg@gmail.com>

--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -33,6 +33,9 @@ flow:
   testUpload:
     nextScreens:
       - name: pageWithCustomSubmitButton
+  pageWithCheckboxSetInput:
+    nextScreens:
+      - name: success
   pageWithOptionalValidation:
     nextScreens:
       - name: success
