--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -27,6 +27,8 @@ form-flow:
       key: testing-fake-key
       domain: 'mail.forms-starter.cfa-platforms.org'
       sender-email: 'Testing <test@mail.forms-starter.cfa-platforms.org>'
+  short-code:
+    length: 8
 spring:
   main:
     allow-bean-definition-overriding: true
