[CCAP-341] Short code config implementation

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -29,6 +29,8 @@ form-flow:
       sender-email: 'Testing <test@mail.forms-starter.cfa-platforms.org>'
   short-code:
     length: 8
+    type: alphanumeric
+    uppercase: false
 spring:
   main:
     allow-bean-definition-overriding: true
