--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -31,6 +31,7 @@ form-flow:
     length: 8
     type: alphanumeric
     uppercase: false
+    prefix: "IL-"
 spring:
   main:
     allow-bean-definition-overriding: true
