[CCAP-341] Create confirmation code for family applications (#598)
* [CCAP-341] Initial short code implementation

* [CCAP-341] Initial short code implementation

* [CCAP-341] Short code config stub

* [CCAP-341] Short code config implementation

* [CCAP-341] Short code config implementation

* [CCAP-341] Updating readme

* [CCAP-341] Updating readme, adding findByShortCode method

* [CCAP-341] Cleanup

* [CCAP-341] Cleanup

* [CCAP-314] Moving short code generation to controller (#599)

* [CCAP-314] Refactoring

* [CCAP-314] Cleaning up documentation

* [CCAP-314] Cleaning up documentation

* [CCAP-341] More tests

* [CCAP-341] More tests

* [CCAP-341] Adding prefix and suffix

* [CCAP-341] code cleanup

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -27,6 +27,11 @@ form-flow:
       key: testing-fake-key
       domain: 'mail.forms-starter.cfa-platforms.org'
       sender-email: 'Testing <test@mail.forms-starter.cfa-platforms.org>'
+  short-code:
+    length: 8
+    type: alphanumeric
+    uppercase: false
+    prefix: "IL-"
 spring:
   main:
     allow-bean-definition-overriding: true
