--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.9.9'
     implementation 'org.flywaydb:flyway-core:[9.+,10.+['
     implementation 'org.webjars.npm:dropzone:5.9.3'
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.782'
+    implementation 'software.amazon.awssdk:s3:2.31.20'
     implementation 'com.smartystreets.api:smartystreets-java-sdk:3.18.4'
     implementation 'com.github.librepdf:openpdf:2.0.3'
     implementation 'org.yaml:snakeyaml:2.4'
