--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ def sonatypeUsername = localEnv.getProperty("SONATYPE_USERNAME") ?: System.geten
 def sonatypePassword = localEnv.getProperty("SONATYPE_PASSWORD") ?: System.getenv("SONATYPE_PASSWORD")
 
 jar {
+    zip64 = true
     doFirst {
         fileTree(dir: "$buildDir/libs", include: '*.jar').each { file ->
             if (!file.name.contains(version)) {
