--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     implementation 'org.springframework.session:spring-session-jdbc'
     implementation 'org.apache.tika:tika-core:3.2.0'
     implementation 'commons-codec:commons-codec:1.18.0'
+    implementation 'org.apache.commons:commons-text:1.10.0'
 
     compileOnly 'org.projectlombok:lombok'
 
