--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,10 @@ java {
     withSourcesJar()
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['-Xlint:deprecation']
+}
+
 tasks.named('bootJar').configure {
     enabled = false
 }
