--- a/build.gradle
+++ b/build.gradle
@@ -228,8 +228,8 @@ nexusPublishing {
             } else {
                 println("Using a release version: ${version}")
             }
-            nexusUrl = uri("https://s01.oss.sonatype.org/service/local/")
-            snapshotRepositoryUrl = uri("https://s01.oss.sonatype.org/content/repositories/snapshots/")
+            nexusUrl = uri("https://ossrh-staging-api.central.sonatype.com/service/local/")
+            snapshotRepositoryUrl = uri("https://central.sonatype.com/repository/maven-snapshots/")
             username = sonatypeUsername
             password = sonatypePassword
         }
