--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,9 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
+      contents: read
       actions: read
+
     services:
       postgres:
         image: postgres
@@ -23,16 +25,19 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
         ports:
           - 5432:5432
+
     steps:
       - uses: actions/checkout@v5
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+
       - name: Set up JDK
         uses: actions/setup-java@v5
         with:
           distribution: 'adopt'
           java-version: '21'
           cache: 'gradle'
+
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -42,11 +47,14 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Test with Gradle
         id: test
         run: ./gradlew clean test --stacktrace
+
       - name: Announce failures on Slack
         if:  ${{ steps.test.conclusion == 'failure' }}
         uses: ravsamhq/notify-slack-action@v2
@@ -54,6 +62,7 @@ jobs:
           status: ${{ job.status }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
       - name: Report results to DeepSource
         continue-on-error: true
         if:  ${{ steps.test.conclusion == 'success' }}
@@ -62,6 +71,7 @@ jobs:
            ./bin/deepsource report --analyzer test-coverage --key java --value-file ./build/reports/jacoco/test/jacocoTestReport.xml
         env:
           DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
+
       - name: Cleanup Gradle Cache
         run: |
           rm -f ~/.gradle/caches/modules-2/modules-2.lock
